Remove javafxsvg library and its usages in the app
This library uses the apache batik library which is a huge library that
results the application jar file become huge.

It also made it hard to modularize (java modules) the application.

Using good old PNGs is far easier and has the same quality as SVGs.